fix: slight spacing between menu items, swapped config to yaml

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,10 @@
 	background: var(--accent) !important;
 }
 
+.menu__inner li {
+	margin: 0px 6px;
+}
+
 a:hover {
 	color: var(--accent);
 }
